# my-vault

./: .gitignore  Cargo.toml
config/: config.yaml  production.yaml  staging.yaml
core/: Cargo.toml
core/src/: lib.rs
core/src/domain/: key.rs  mod.rs  secret.rs  user.rs
core/src/gateway/: key.rs  mod.rs  secret.rs  user.rs
core/src/use_case/: mod.rs
core/src/use_case/secrets/: create.rs  mod.rs  show.rs
core/src/use_case/user/: mod.rs  signup.rs
database/: Cargo.toml
database/src/entities/: key.rs  mod.rs  secret.rs  user.rs
database/src/repository/: key.rs  mod.rs  secret.rs  user.rs
http/: Cargo.toml
http/src/: lib.rs  main.rs
http/src/routes/: mod.rs
http/src/routes/items/: create.rs  mod.rs  show.rs
http/src/routes/secrets/: create.rs  mod.rs  show.rs
http/src/routes/users/: mod.rs  sign_up.rs
http/tests/: create_secret_test.rs  show_secret.rs  signup_test.rs
support/: Cargo.toml
support/src/: auto_increment.rs  config.rs  lib.rs
