[workspace]
members = ["http", "database", "core", "support"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Mimi"]
description = "Vault system SAAS"
documentation = "https://example.com/bar"


[workspace.dependencies]
rstest = "0.23.0"
mockall = "0.13.0"
mockall_double = "0.3.1"
fake = { version = "2.10.0", features = ["derive"] }
