[package]
name = "http"
edition = "2021"
version.workspace = true
authors.workspace = true
description.workspace = true
documentation.workspace = true

[dependencies]
rocket = { version = "0.5.1", features = ["json"] }
lazy_static = "1.5.0"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
core = { path = "../core" }
database = { path = "../database" }

[dev-dependencies]
rstest.workspace = true